--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </nav>
         </header>
 
+        <a href="ps2-tests.html">Part 2 Tests</a>
         <h2 id="projects">Projects</h2>
         <ul>
             <li><a href="https://chiayingh.com/worldiff/" target="_blank">App design: Worldiff</a></li>
